--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "primeicons": "^7.0.0",
+    "primevue": "^3.51.0",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
