--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@canopassoftware/vue-file-upload": "^1.0.8",
     "axios": "^1.6.8",
+    "file-saver": "^2.0.5",
     "json-server": "^1.0.0-alpha.23",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
